# byreal-apps

./: README.md
.github/scripts/: build_candidate.py
apps/141232970/rb7eb0c9ad1/.aomi/: source-branch.json
apps/141232970/rb7eb0c9ad1/byreal/: BYREAL_CLI_FLOWS.md  Cargo.toml  aomi.toml
apps/141232970/rb7eb0c9ad1/byreal-copy-trade/: Cargo.toml  aomi.toml  test.json
apps/141232970/rb7eb0c9ad1/byreal-copy-trade/src/: client.rs  lib.rs  lp.rs
apps/141232970/rb7eb0c9ad1/byreal-lp/: Cargo.toml  aomi.toml  test.json
apps/141232970/rb7eb0c9ad1/byreal-lp/.aomi/: deployment.json
apps/141232970/rb7eb0c9ad1/byreal-lp/src/: client.rs  lib.rs  tool.rs
apps/141232970/rb7eb0c9ad1/byreal-strategies/: aomi.toml
apps/141232970/rb7eb0c9ad1/byreal-strategies/.aomi/: deployment.json
apps/141232970/rb7eb0c9ad1/byreal-strategies/src/: client.rs  tool.rs
apps/141232970/rb7eb0c9ad1/byreal/src/: lib.rs  testing.rs
apps/141232970/rb7eb0c9ad1/byreal/src/client/: mod.rs  perps.rs
apps/141232970/rb7eb0c9ad1/byreal/src/tool/: lp.rs  perps.rs  spot.rs
apps/byreal-copy-trade/: Cargo.toml
apps/byreal-copy-trade/src/: client.rs  lib.rs  tool.rs
apps/byreal-lp/: Cargo.toml
apps/byreal-strategies/: Cargo.toml
apps/byreal-strategies/src/: lib.rs
apps/byreal/src/client/: spot.rs
apps/byreal/src/tool/: mod.rs
