[package]
name = "byreal-strategies"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# Standalone package; also stops cargo's upward workspace walk.
[workspace]

[dependencies]
aomi-sdk = "=3.0.2"
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
