[package]
name = "byreal-copy-trade"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# Standalone package (root workspace lists apps/* under `exclude`). The empty
# table also stops cargo's upward workspace walk from escaping a git worktree.
[workspace]

[dependencies]
aomi-sdk = "=3.0.2"
# Compose the position primitive: reuse byreal-lp's envelope decoder, its
# `LpClient` position reads, and the open-position execute path
# (`open_position_route`). Copy-trade adds only the Copy-Farming discovery
# surface on top — no duplication of byreal's zap contract or NFT signing.
byreal-lp = { path = "../byreal-lp" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
